--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ agp = "8.6.1"
 androidxComposeBom = "2025.04.00"
 compose = "1.7.8"
 androidxJunit = "1.2.1"
-cameraxVersion = "1.4.2"
+cameraxVersion = "1.3.0"
 coilCompose = "2.7.0"
 composeBomVersion = "2025.04.00"
 converterGson = "2.9.0"
@@ -33,6 +33,10 @@ compose-ui = "1.7.8"
 roomPagingVersion = "2.7.0"
 ksp = "2.1.20-1.0.31"
 paging-compose = "3.3.6"
+mediapipe = "0.20230731"
+accompanist = "0.30.1"
+tensorflow = "2.5.0"
+
 
 
 [libraries]
@@ -42,9 +46,6 @@ androidx-activity-compose-v172 = { module = "androidx.activity:activity-compose"
 androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "pagingVersion" }
 androidx-paging-runtime-v311 = { module = "androidx.paging:paging-runtime", version.ref = "pagingVersion" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
-androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraxVersion" }
-androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraxVersion" }
-androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraxVersion" }
 #noinspection SimilarGradleDependency
 androidx-compose-bom-v20230300 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 #noinspection SimilarGradleDependency
@@ -88,6 +89,17 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt_navigation_compose" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomPagingVersion" }
 androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging-compose" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraxVersion" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraxVersion" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraxVersion" }
+androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraxVersion" }
+# MediaPipe Face Detection
+google-mediapipe-tasks-vision = { group = "com.google.mediapipe", name = "tasks-vision", version.ref = "mediapipe" }
+
+# Accompanist Permissions
+google-accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
+
+tensorflow-lite = { group = "org.tensorflow", name = "tensorflow-lite", version.ref = "tensorflow" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
